# GamePoint

./: .gitignore  .gitleaks.toml  ENV.example  README.md  package.json  pnpm-lock.yaml  wrangler.jsonc  wrangler.toml
.github/workflows/: ci.yml  release.yml
.understand-anything/: ARCHITECTURE.md  CONVENTIONS.md  CREDENTIALS.md  DECISIONS.md  E2E_CANONICAL_BEHAVIOR.md  ENVIRONMENT.md  IDENTITY.md  README.md  TOPOLOGY.md  graph-meta.json
apps/overlay/: README.md  index.html  package.json
apps/web/: _headers  index.html  package.json  playwright.config.ts
audit/: gamepoint-cowork-evidence.md
docs/: component-parity-audit.md  consent.md  visual-animation-direction.md
docs/adr/: ADR-001-overlay-host.md  ADR-002-relational-first-retrieval.md  ADR-003-frame-only-v1.md  ADR-004-model-alias-cost-circuit.md  ADR-005-cloudflare-frontend-hosting.md  ADR-006-dispatch-https-json.md  ADR-007-zod-single-source-contracts.md  ADR-008-session-config-handoff.md  ADR-009-hybrid-provider-routing.md  ADR-010-voice-tts-stt-local-consent-gated.md
docs/decisions/: dependencies.md
docs/design/: voice-and-perception.md
docs/evidence/: GO-NO-GO-v1.md  GO-NO-GO-v2-cowork-2026-07-09.md  domain-canonicalization-verify.md  domain-canonicalization.md  gamepointagent-domain-check.md  gamepointagent-domain-fix.md  preflight.md  ui-audit.md  wp-a3-a4.md  wp0-cloudflare-fix-verify.md  wp0-cloudflare-fix.md  wp0-deploy.md  wp0-gates.md  wp0-reverify.md  wp0-screenshot-cleanup.md  wp0-screenshot.md  wp0.md  wp1.md  wp4.md  (+4 more)
governance/: compliance-matrix.md
release-evidence/: 01-source-commit.txt  02-install-and-ci-output.md  03-web-route-smoke.md  05-auth-session-proof.md  06-overlay-binding-proof.md  07-windows-capture-proof.md  08-assist-loop-proof.md  09-realtime-hud-proof.md  10-security-secret-scan.md  11-release-decision.md
services/capture-win/: Cargo.toml
services/capture-win/crates/audio/: Cargo.toml
services/capture-win/crates/audio/src/: lib.rs
services/capture-win/crates/capture/: Cargo.toml
services/capture-win/crates/capture/src/: dxgi.rs  lib.rs
services/capture-win/crates/dispatch/: Cargo.toml
services/capture-win/crates/dispatch/src/: lib.rs
services/capture-win/crates/dispatch/tests/: parity.rs
services/capture-win/crates/ringbuf-x/: Cargo.toml
services/capture-win/crates/ringbuf-x/src/: lib.rs
services/capture-win/crates/svc/: Cargo.toml
services/capture-win/crates/svc/src/: config.rs  lib.rs  win_probe.rs
workers/: web-assets.ts
(+68 files in other folders)
