[package]
name = "dispatch"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64 = "0.22"
ureq = { version = "2", features = ["json"], optional = true }

[features]
default = ["http"]
http = ["dep:ureq"]
