[package]
name = "svc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
capture = { path = "../capture" }
dispatch = { path = "../dispatch", default-features = false }
ringbuf-x = { path = "../ringbuf-x" }
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
] }
